# palette

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Catppuccin.afpalette  Catppuccin.ase  Catppuccin.css  Catppuccin.gpl  Catppuccin.kpl  Catppuccin.scss  Makefile  README.md  builder.js  css_builder.js  deno.json  esbuild.js  flake.nix  import_map.json  index.d.ts  index.js  mod.test.ts  mod.ts  package-lock.json  package.json  palette-porcelain.json  palette.json  porcelain.jq  release-please-config.json  shell.nix  test.js  test.mjs  tsup.config.ts
afpalette/: Catppuccin.afpalette  catppuccin-frappe.afpalette  catppuccin-latte.afpalette  catppuccin-macchiato.afpalette  catppuccin-mocha.afpalette
ase/: Catppuccin.ase
clr/: Catppuccin Frappe.clr  Catppuccin Latte.clr  Catppuccin Macchiato.clr  Catppuccin Mocha.clr
css/: catppuccin.css
docs/: Sass.md  css.md  node.md  sass.md
gpl/: Catppuccin Frappe.gpl  Catppuccin Latte.gpl  Catppuccin Macchiato.gpl  Catppuccin Mocha.gpl
java/: pom.xml
less/: catppuccin-accents.less  catppuccin-flavour.less  catppuccin-mixins.less  catppuccin.less  frappe.less  latte.less  macchiato.less  mocha.less
lib/: builder.lua
lut/: README.md  apply.sh
nix/: default.nix  frappe.nix  latte.nix  macchiato.nix  (+1 more)
python/: .gitignore  README.md  catppuccin.py  pyproject.toml
python/tests/: conftest.py  test_colour.py  test_flavour.py
rust/: Cargo.toml  README.md
rust/examples/: simple.rs  term.rs
rust/src/: colour.rs  flavour.rs  flavour_colours.rs  frappe.rs  latte.rs  lib.rs  macchiato.rs  mocha.rs  palette.rs
(+54 files in other folders)
