[package]
name = "catppuccin"
version = "1.0.2"
authors = ["backwardspy <backwardspy@gmail.com>"]
edition = "2021"
description = "🦀 Soothing pastel theme for Rust."
repository = "https://github.com/catpuccin/palettes/tree/main/rust"
license = "MIT"
keywords = ["catppuccin", "palette", "colour", "theme"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ansi_term = { version = "0.12.1", optional = true }

[dev-dependencies]
indoc = "1.0.7"

[features]
ansi = ["ansi_term"]
